@@ -17,6 +17,7 @@
 
 package org.opensaml.saml2.metadata.provider;
 
+import java.util.HashSet;
 import java.util.Iterator;
 
 import org.opensaml.saml2.metadata.AffiliationDescriptor;
@@ -195,6 +196,8 @@ public class SignatureValidationFilter implements MetadataFilter {
                 log.error("RoleDescriptor '{}' subordinate to entity '{}' failed signature verification, " 
                        + "removing from metadata provider", 
                        roleChild.getElementQName(), entityID); 
+                // Note that this is ok since we're iterating over an IndexedXMLObjectChildrenList directly,
+                // rather than a sublist like in processEntityGroup, and iterator remove() is supported there.
                roleIter.remove();
             }
         }
@@ -237,6 +240,10 @@ public class SignatureValidationFilter implements MetadataFilter {
             verifySignature(entitiesDescriptor, entitiesDescriptor.getName(), true);
         }
         
+        // Can't use IndexedXMLObjectChildrenList sublist iterator remove() to remove members,
+        // so just note them in a set and then remove after iteration has completed.
+        HashSet<XMLObject> toRemove = new HashSet<XMLObject>();
+        
         Iterator<EntityDescriptor> entityIter = entitiesDescriptor.getEntityDescriptors().iterator();
         while (entityIter.hasNext()) {
             EntityDescriptor entityChild = entityIter.next();
@@ -253,8 +260,13 @@ public class SignatureValidationFilter implements MetadataFilter {
             } catch (FilterException e) {
                log.error("EntityDescriptor '{}' failed signature verification, removing from metadata provider", 
                        entityChild.getEntityID()); 
-               entityIter.remove();
+               toRemove.add(entityChild);
             }
+        }
+        
+        if (!toRemove.isEmpty()) {
+            entitiesDescriptor.getEntityDescriptors().removeAll(toRemove);
+            toRemove.clear();
         }
         
         Iterator<EntitiesDescriptor> entitiesIter = entitiesDescriptor.getEntitiesDescriptors().iterator();
@@ -266,10 +278,13 @@ public class SignatureValidationFilter implements MetadataFilter {
             } catch (FilterException e) {
                log.error("EntitiesDescriptor '{}' failed signature verification, removing from metadata provider", 
                        entitiesChild.getName()); 
-               entitiesIter.remove();
+               toRemove.add(entitiesChild);
             }
         }
         
+        if (!toRemove.isEmpty()) {
+            entitiesDescriptor.getEntitiesDescriptors().removeAll(toRemove);
+        }
     }
 
     /**
